--- a/pom.xml
+++ b/pom.xml
@@ -114,16 +114,17 @@
 					</execution>
 					<execution>
 						<id>report</id>
-						<phase>test</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
 						<configuration>
 							<excludes>
 								<exclude>com/kaplan/gym_service/GymServiceApplication.class</exclude>
-								<exclude>com/kaplan/gym_service/model/**</exclude>
-								<exclude>com/kaplan/gym_service/dto/**</exclude>
-								<exclude>**/exception/**</exclude>
+								<exclude>com/kaplan/gym_service/model/**/*</exclude>
+								<exclude>com/kaplan/gym_service/dto/**/*</exclude>
+								<exclude>com/kaplan/gym_service/exception/**/*</exclude>
+								<exclude>com/kaplan/gym_service/controller/**/*</exclude>
 							</excludes>
 						</configuration>
 					</execution>
